RESOLVED FIXED282986
[GLib] Fix non-c-typedef-for-linkage warning
https://bugs.webkit.org/show_bug.cgi?id=282986
Summary [GLib] Fix non-c-typedef-for-linkage warning
Patrick Griffis
Reported 2024-11-12 08:07:56 PST
``` WebKit/Source/WebKit/NetworkProcess/glib/WebKitCachedResolver.cpp:35:15: error: anonymous non-C-compatible type given name for linkage purposes by typedef declaration; add a tag name here [-Werror,-Wnon-c-typedef-for-linkage] 35 | typedef struct { | ^ | WebKitCachedResolverPrivate ```
Attachments
Patrick Griffis
Comment 1 2024-11-12 08:09:02 PST
EWS
Comment 2 2024-11-12 11:02:57 PST
Committed 286491@main (ea7b81bf952e): <https://commits.webkit.org/286491@main> Reviewed commits have been landed. Closing PR #36529 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.