Cherry-pick 286491@main (ea7b81bf952e). https://bugs.webkit.org/show_bug.cgi?id=282986

[GLib] Fix non-c-typedef-for-linkage warning
    https://bugs.webkit.org/show_bug.cgi?id=282986

    Reviewed by Carlos Garcia Campos.

    ```
    WebKit/Source/WebKit/NetworkProcess/glib/WebKitCachedResolver.cpp:35:15: error: anonymous non-C-compatible type given name for linkage purposes by typedef declaration; add a tag name here [-Werror,-Wnon-c-typedef-for-linkage]
       35 | typedef struct {
          |               ^
          |                WebKitCachedResolverPrivate
    ```

    This was unnecessarily using a typedef.

    * Source/WebKit/NetworkProcess/glib/WebKitCachedResolver.cpp:

    Canonical link: https://commits.webkit.org/286491@main

Canonical link: https://commits.webkit.org/282416.282@webkitglib/2.46